improved Recommendations and added extra information